2006-11-06  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Update to add new file.
	* Makefile.am: Update to add new file.
	* Message.cs: Reformat source to follow Mono source style. Ensure that
	ToString works if a Location is null (e.g. rules on assemblies and 
	modules may not have a location).
	* MessageType.cs: New file. Moved enum from Message.cs.

2006-10-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: Remove Violations.Reset(); from Process as it's reset the 
	list and breaks the console runner when processing more than one
	assembly (e.g. *.dll).

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.
	Add new MessageCollection class to the build.

2006-09-28  Christian Birkl  <christian.birkl@gmail.com>

	* Gendarme.Framework.csproj: Included ChangeLog
	* MessageCollection.cs, Gendarme.Framework.csproj, framework.mdp:
	Added new class to replace the untyped IList interface for 
	holding Message objects.
	* IRule.cs: Changed all interfaces to return the new
	typed MessageCollection class instead of IList.

2006-09-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Violation.cs: Added a new Assembly property deduced from the 
	violator object.

2006-09-17  Christian Birkl <christian.birkl@gmail.com>

	* Runner.cs: Reset the violation list when processing a new assembly.
	* Violations.cs: Implement IEnumerable.

2006-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Rename the output assembly to Gendarme.Framework.dll
	like it is built when using the Makefile (instead of framework.dll).
	Found by Christian Birkl.

2006-08-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Location.cs: Apply self compliance (UseStringEmptyRule).

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: New. Project file for MonoDevelop.

2006-06-13  Sebastien Pouliot  <sebastien@ximian.com>
